css/vehicle.css
.main_container {
    padding-top: 7vh;
    width: 100%;
    background-color: #474350;
    color: white;
}

.d-flex {
    display: flex;
    flex-wrap: wrap;
}

.row {
    flex-direction: row;
}

.col {
    flex-direction: column;
}

.align-center {
    justify-content: center;
    align-items: center;
}

.content-padding {
    padding: 1.5%;
}

.justify-content-evenly {
    justify-content: space-evenly;
}

.justify-content-around {
    justify-content: space-around;
}

.description div,
.content {
    padding-top: 10px;
}

.description h3,
.content h3 {
    height: 20%;
    padding-bottom: 20px;
}

.description ol,
.content p {
    height: 80%;
}

.image {
    width: 400px;
    height: 400px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
}

.image_m1a2 {
    background-image: url(../image/m1a2.png);
}

h3 {
    text-align: center;
    font-size: 35px;
    color: #ffc857;
}

h2 {
    font-size: 50px;
    text-align: center;
    padding-top: 15px;
}

ol li {
    line-height: 1.35;
}

.content {
    height: 50%;
}

.description h3{
    font-size: 25px;
}

.content p {
    padding: 15px 0;
}

.border-top{
    border-top-style: solid;
    border-color: #1c1c1c8e;
}

.border-1{
    border-width: 5px;
}

/*mobile*/
@media (max-width: 857px) {
    .description h3 {
        height: 30%;
    }

    .description ol {
        height: 70%;
    }
    .main_container {
        padding-left: 5%;
        padding-right: 5%;
    }
}

